Fixed problem where locked columns hide settings popup.
When there are too much columns locked the locked columns this columns were positioned in front of the settings popup.

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -58,6 +58,7 @@
         display: block;
     }
     .options-container {
+        z-index: 1;
         display: none;
         position: sticky;
         top: 0;
